@@ -527,7 +527,7 @@ Scheme_Object *scheme_make_external_cptr(GC_CAN_IGNORE void *cptr, Scheme_Object
 {
   Scheme_Object *o;
   o = scheme_make_cptr(NULL, typetag);
-  SCHEME_CPTR_FLAGS(o) |= 1;
+  SCHEME_CPTR_FLAGS(o) |= 0x1;
   SCHEME_CPTR_VAL(o) = cptr;
   return o;
 }
@@ -537,7 +537,8 @@ Scheme_Object *scheme_make_offset_cptr(void *cptr, long offset, Scheme_Object *t
   Scheme_Object *o;
 
   o = (Scheme_Object *)scheme_malloc_small_tagged(sizeof(Scheme_Offset_Cptr));
-  o->type = scheme_offset_cpointer_type;
+  o->type = scheme_cpointer_type;
+  SCHEME_CPTR_FLAGS(o) |= 0x2;
   SCHEME_CPTR_VAL(o) = cptr;
   SCHEME_CPTR_TYPE(o) = (void *)typetag;
   ((Scheme_Offset_Cptr *)o)->offset = offset;
@@ -549,7 +550,7 @@ Scheme_Object *scheme_make_offset_external_cptr(GC_CAN_IGNORE void *cptr, long o
 {
   Scheme_Object *o;
   o = scheme_make_offset_cptr(NULL, offset, typetag);
-  SCHEME_CPTR_FLAGS(o) |= 1;
+  SCHEME_CPTR_FLAGS(o) |= 0x1;
   SCHEME_CPTR_VAL(o) = cptr;
   return o;
 }
