@@ -1,5 +1,6 @@
 5.0.99.2
 proxy => impersonator
+equal? equates C pointers when they refer to the same address
 
 5.0.99.1
 Internal: weak boxes are cleared before non-will-like
